--- a/css/flash.css
+++ b/css/flash.css
@@ -1,16 +1,52 @@
 * {margin: 0;}
 html, body {height: 100%; padding: 0 !important;}
-.wrapper {min-height: 99%;height: auto !important;height:99%;margin: 0 auto -95px;text-align: center;padding-top: 6px;}
-.footer {height: 95px; text-align: center; z-index:999; position: relative; background-color:#FFF;}
-#HanziS{font-size: 6em; text-align: center; font-family:Kaiti SC, PingFang SC,STHeitiSC-Medium,STHeitiTC-Medium !important; padding: 0;}
-#Pinyin, #English, #PartofSpeech{text-align: center; font-size: 2em;}
-#Views {text-align: center; font-size: 1.05em; color: LightGray;}
-#footCenter{color: LightGray; font-size: 1.5em; margin-left: 5%; margin-right: 5%;}
+div {float:left; width:100%;}
+.header {width:100%;}
+.wrapper {width:100%; min-height: 99%;height: auto !important;height:99%;margin: 0 auto -95px;text-align: center;padding-top: 6px;}
+.footer {width: 100%; height: 95px; text-align: center; z-index:999; position: relative; background-color:#FFF;}
+#Card{border-left:1px solid #000; border-right: 3px solid #000; border-top: 1px solid #000; border-bottom: 3px solid #000; border-radius:11px; -moz-border-radius:11px; -webkit-border-radius:11px; overflow-y:auto; background-color:#F5F5F5;width:80%;margin-left:10%; margin-right:10%;height:45em;}
+#HanziS{font-size: 20em; text-align: center; font-family:Kaiti SC, PingFang SC,STHeitiSC-Medium,STHeitiTC-Medium !important; padding: 0;}
+a.strokeURL {text-decoration: none; color:#000;}
+#Pinyin, #English, #PartofSpeech{text-align: center; font-size: 1.7em; width:98%;}
+#Views {text-align: center; font-size: 1.05em; color: #B0C4DE; width:100%;}
+#footCenter{color: #B0C4DE; font-size: 1.25em; margin-left: 0.5%; margin-right: 0.5%;}
 .btn-huge {font-size: 125% !important; margin: .25em; min-width: 3em !important;}
 .pyn {color:purple;}
 .eng {color:green;}
-.pos {color: #D3D3D3; display: none;}
+.pos {color: #B0C4DE; display: none;}
 .btn-pinyin {color: purple;}
 .btn-english {color: green;}
 p.chk {margin-top: 12px;}
-@media only screen and (min-width: 621px) {#HanziS{font-size: 10em;}}
+@media all and (min-width: 769px) {
+	#HanziS{font-size: 10em !important;} 
+	#Card{width:50% !important; margin-left:25% !important; margin-right:25% !important; height:30em !important;}
+}
+@media all and (min-width: 621px and max-width: 768px) {
+	#HanziS{font-size: 7.25em !important;} 
+	#Card{width:50% !important; margin-left:25% !important; margin-right:25% !important; height:30em !important;}
+}
+@media all and (max-width: 620px) {
+	#HanziS{font-size: 6em !important;} 
+	#Card{width:95% !important; margin-left:2.5% !important; margin-right:2.5% !important; height:25em !important}
+}
+.loader {
+	position: absolute;left: 50%;top: 45%;
+	z-index: 1;
+	width: 150px;height: 150px;
+	margin: -75px 0 0 -75px;
+	border-radius: 50%;
+	border-bottom: 10px solid #ECDB54; border-top: 10px solid #6B5B95;
+	border-left: 10px solid #E94B3C; border-right: 10px solid #BFD641;
+	width: 120px;height: 120px;
+	-webkit-animation: spin 2s linear infinite;
+	animation: spin 2s linear infinite;
+	display: none;
+}
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
