--- a/css/flash.css
+++ b/css/flash.css
@@ -6,17 +6,16 @@ html, body {height:100%;padding:0 !important;}
 .footer {width:100%;height:95px;text-align:center;z-index:999;position:relative;background-color:#FFF;}
 #Card{border-left:1px solid #000;border-right:3px solid #000;border-top:1px solid #000;border-bottom:3px solid #000;border-radius:11px;-webkit-border-radius:11px;overflow-y:auto;background-color:#F5F5F5;width:80%;margin-left:10%;margin-right:10%;height:45em;overflow-x:hidden;}
 #HanziS{font-size:20em;text-align:center;font-family:Kaiti SC,PingFang SC,STHeitiSC-Medium,STHeitiTC-Medium !important;padding:0;}
-a.strokeURL {text-decoration:none;color:#000;}
-#Pinyin, #English, #PartofSpeech{text-align:center;font-size:1.7em;width:98%;}
-#Views {text-align:center;font-size:1.05em;color:#B0C4DE;width:100%;}
+#StrokeOrder{text-align:center;padding-bottom:0.25em;}
+a.btn-stroke-order{margin-left:0.75em;margin-right:0.75em;}
+#Pinyin, #English, #PartofSpeech{text-align:center;font-size:1.75em;width:98%;}
+#Pinyin{font-weight: bold;}
+#Views {text-align:center;font-size:1.05em;color:#B0C4DE;width:100%;padding-top:0em;padding-bottom:0.25em;}
 #footCenter{color:#B0C4DE;font-size:1.25em;margin-left:0.5%;margin-right:0.5%;}
 .btn-huge {font-size:125% !important;margin:.25em;min-width:3em !important;}
 .pyn {color:purple;}
-.eng {color:green;}
 .pos {color:#B0C4DE;display:none;}
 .posTab {color:#B0C4DE;}
-.btn-pinyin {color:purple;}
-.btn-english {color:green;}
 p.chk {margin-top:12px;}
 #List{display:none;overflow:auto;border:1px solid #DCDCDC;}
 #listTab{border-bottom:1px solid #DCDCDC;}
@@ -60,3 +59,8 @@ td:nth-child(1) {width:12%}
 td:nth-child(2) {width:15%}
 td:nth-child(3) {width:25%;color:purple;}
 td:nth-child(4) {width:48%}
+.tone1 {color: red;}
+.tone2 {color: green;}
+.tone3 {color: blue;}
+.tone4 {color: purple;}
+.tone5 {color: gray;}
