--- a/css/flash.css
+++ b/css/flash.css
@@ -1,16 +1,19 @@
 * {margin:0;}
 html, body {height:100%;padding:0 !important;}
-/* div {float:left;width:100%;} */
 .header {width:100%;}
 .wrapper {width:100%;min-height:99%;height:auto !important;height:99%;margin:0 auto -95px;text-align:center;padding-top:6px;}
 .footer {width:100%;height:95px;text-align:center;z-index:999;position:relative;background-color:#FFF;}
-#Card{border-left:1px solid #000;border-right:3px solid #000;border-top:1px solid #000;border-bottom:3px solid #000;border-radius:11px;-webkit-border-radius:11px;overflow-y:auto;background-color:#F5F5F5;width:80%;margin-left:10%;margin-right:10%;height:45em;overflow-x:hidden;}
-#HanziS{font-size:20em;text-align:center;font-family:Kaiti SC,PingFang SC,STHeitiSC-Medium,STHeitiTC-Medium !important;padding:0;}
-#StrokeOrder{text-align:center;padding-bottom:0.25em;}
-a.btn-stroke-order{margin-left:0.75em;margin-right:0.75em;}
-#Pinyin, #English, #PartofSpeech{text-align:center;font-size:1.75em;width:98%;}
+#Card{border-left:1px solid #000;border-right:3px solid #000;border-top:1px solid #000;border-bottom:3px solid #000;border-radius:11px;-webkit-border-radius:11px;overflow-y:auto;background-color:#F5F5F5;width:80%;margin-left:10%;margin-right:10%;overflow-x:hidden;}
+#animation {width:100%;text-align:center;margin:0 auto;display:inline-block;}
+#animation-buttons {width:100%;text-align:center;margin:0 auto;display:inline-block;}
+#ani-container {display:inline-block;text-align:center;margin:0 auto;}
+.ani {float:left;display:inline-block;text-align:center;margin:0 auto;}
+.div-btn {float:left;display:inline-block;text-align:center;margin:0 auto;}
+a.btn-stroke-order{margin-left:0.25em;margin-right:0.25em;}
+button.btn-audio{margin-left:0.5em;margin-right:0.5em;margin-top:0.5em;}
+#Pinyin, #English, #PartofSpeech{text-align:center;font-size:1.7em;width:98%;}
 #Pinyin{font-weight: bold;}
-#Views {text-align:center;font-size:1.05em;color:#B0C4DE;width:100%;padding-top:0em;padding-bottom:0.25em;}
+#Views {text-align:center;font-size:1.05em;color:#6f93c3;width:100%;padding-top:0em;}
 #footCenter{color:#B0C4DE;font-size:1.25em;margin-left:0.5%;margin-right:0.5%;}
 .btn-huge {font-size:125% !important;margin:.25em;min-width:3em !important;}
 .pyn {color:purple;}
@@ -20,19 +23,16 @@ p.chk {margin-top:12px;}
 #List{display:none;overflow:auto;border:1px solid #DCDCDC;}
 #listTab{border-bottom:1px solid #DCDCDC;}
 @media all and (min-width:769px) {
-	#HanziS{font-size:10em !important;} 
-	#Card{width:50% !important;margin-left:25% !important;margin-right:25% !important;height:30em !important;}
+	#Card{width:50% !important;margin-left:25% !important;margin-right:25% !important;height:32em !important;}
 	#List{width:50%;margin-left:25%;margin-right:25%;margin-top:32px;height:40em;overflow:auto;}	
 }
 @media all and (min-width:621px) and (max-width:768px) {
-	#HanziS{font-size:7.25em !important;} 
-	#Card{width:50% !important;margin-left:25% !important;margin-right:25% !important;height:30em !important;}
-	#List{width:50%;margin-left:25%;margin-right:25%;margin-top:32px;height:40em;overflow:auto;}	
+	#Card{width:80% !important;margin-left:10% !important;margin-right:10% !important;height:42em !important;}
+	#List{width:70%;margin-left:15%;margin-right:15%;margin-top:32px;height:42em;overflow:auto;font-size:125% !important;}	
 }
 @media all and (max-width:620px) {
-	#HanziS{font-size:6em !important;} 
-	#Card{width:95% !important;margin-left:2.5% !important;margin-right:2.5% !important;height:25em !important}
-	#List{width:98%;margin-left:1%;margin-right:1%;margin-top:6px;height:35em;}	
+	#Card{width:95% !important;margin-left:2.5% !important;margin-right:2.5% !important;height:26em !important}
+	#List{width:100%;margin-left:0%;margin-right:0%;margin-top:6px;height:35em;}	
 }
 .loader {
 	position:absolute;left:50%;top:45%;
@@ -55,12 +55,16 @@ p.chk {margin-top:12px;}
 	0% { transform:rotate(0deg);}
 	100% { transform:rotate(360deg);}
 }
-td:nth-child(1) {width:12%}
-td:nth-child(2) {width:15%}
-td:nth-child(3) {width:25%;color:purple;}
-td:nth-child(4) {width:48%}
+td:nth-child(1) {width:7%;font-size:80%;padding:0px 0px 0px 2px !important;}
+td:nth-child(2) {width:18%;font-size:120%;padding:0px 0px 0px 0px !important;}
+td:nth-child(3) {width:25%;padding:0px 0px 0px 0px !important;}
+td:nth-child(4) {width:50%;padding:0px 0px 0px 0px !important;}
 .tone1 {color: red;}
 .tone2 {color: green;}
 .tone3 {color: blue;}
 .tone4 {color: purple;}
 .tone5 {color: gray;}
+#audio_player_container {display:none;}
+.table-borderless{border:none !important;}
+.table-borderless td{border:none !important;}
+svg {display:inline-block !important;margin:0 auto !important;text-align: center !important;}
